force-app/main/default/objects/Billing_Hold__c/Billing_Hold__c.object-meta.xml
<CustomObject>
    <label>Billing Hold</label>
    <nameField>
        <displayFormat>BH-{0000}</displayFormat>
        <label>Billing Hold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Holds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>