force-app/main/default/objects/Billing_Hold__c/fields/Billing_Hold_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Billing_Hold_Requestor__c</fullName>
    <label>Billing Hold Requestor</label>
    <type>TextArea</type>
</CustomField>