force-app/main/default/objects/Billing_Hold__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>